# Decision-Helper

./: .gitignore  CMakeLists.txt  CSVManager.cpp  CSVManager.hpp  DescisionPipeline.cpp  DescisionPipeline.hpp  InputStruct.hpp  README.md  Student.cpp  Student.hpp  main.cpp  preprocessing.cpp  preprocessing.hpp  unit_tests.cpp
